# CoDuAR_and_Assembly_Copilot

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assembly_copilot/: README.md  agent.py  assembly_copilot_gui.py  bridge.py  example_usage.py  realtime_system1.py  run_system2.py  tools.py
assembly_copilot/data/: knowledge_base.json  multimedia_db.json  reference_performance.json  tpg.json
assembly_copilot/script/: launch.sh
assets/demo/: README.md
assets/figures/: README.md
checkpoints/: README.md
coduar/: README.md  engine_for_compositional_transformer.py  run_compositional_transformer.py  utils.py
coduar/data/: prepare_custom_dataset.sh  prepare_dual_hand_single_stream.py
coduar/dataset/: __init__.py  build_compositional.py  build_dual_hand_whole_action.py  datasets.py
coduar/models/: __init__.py  modeling_finetune.py  modeling_finetune_compositional_dual_transformer.py  modeling_finetune_compositional_dual_transformer_single_stream.py
coduar/script/: evaluate.sh  train.sh  train_custom_dataset.sh
coduar/utils/: validate_compositional_annotations.py
configs/: demo_assembly_copilot.example.yaml  evaluate_coduar.example.yaml  paths.example.yaml  train_coduar.example.yaml
data/annotations/: train_list_compositional.example.txt  (+1 more)
docs/: code_migration_plan.md  dataset.md  demo.md  reproducing_results.md  source_inventory.md
scripts/: evaluate_coduar.sh  run_assembly_copilot_demo.sh  train_coduar.sh
tests/: test_placeholders.py
(+24 files in other folders)
